[package]
name = "rust_bucket"
version = "0.2.0"
authors = [
    "Matt Pindell <pindell.m@gmail.com>",
    "Regis Boudinot <boudinot.regis@yahoo.com>",
    "Alex Hill <alexander.d.hill.89@gmail.com>",
]
edition = "2024"

[dependencies]

flate2 = { version = "1.0.17", features = [
    "zlib-rs",
], default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "main_benchmark"
harness = false
